--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
-  - gcloud auth activate-service-account --key-file service-account.json
+  - gcloud auth activate-service-account --key-file service.json
   - gcloud config set project fibonacci-k8s-273103
   - gcloud config set compute/zone us-west1-a
   - gcloud container clusters get-credentials multi-cluster
