added cert configs

--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -17,3 +17,5 @@ spec:
             backend:
               serviceName: server-cluster-ip-service
               servicePort: 5000
+
+#cert-manager.io/cluster-issuer: "letsencrypt-prod"
