--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -5,9 +5,17 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$1
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
 spec:
+  tls:
+    - hosts:
+        - transparentcast.net
+        - www.transparentcast.net
+      secretName: transparentcast-net-tls
   rules:
-    - http:
+    - host: transparentcast.net
+      http:
         paths:
           - path: /?(.*)
             backend:
@@ -17,5 +25,14 @@ spec:
             backend:
               serviceName: server-cluster-ip-service
               servicePort: 5000
-
-#cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    - host: www.transparentcast.net
+      http:
+        paths:
+          - path: /?(.*)
+            backend:
+              serviceName: client-cluster-ip-service
+              servicePort: 3000
+          - path: /api/?(.*)
+            backend:
+              serviceName: server-cluster-ip-service
+              servicePort: 5000
